# Django_REST_basic

./: .gitignore  README.md  pyproject.toml
cursos/: admin.py  models.py  serializers.py
cursos/migrations/: 0001_initial.py
cursos/tests/: test_models.py
escola/: settings.py  urls.py
