[tool.poetry]
name = "django-rest-basic"
version = "0.1.0"
description = ""
authors = ["vicrrs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
autopep8 = "^2.1.0"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
